libs/wingc/src/lsp/snapshots/completions/nested_json_literal_cast_inner.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: "durationThing:"
  kind: 5
  detail: duration
  sortText: "ab|a|durationThing:"
  insertText: "durationThing: $1"
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest

