libs/wingc/src/lsp/snapshots/completions/nested_struct_literal.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: "durationThing:"
  kind: 5
  detail: duration
  documentation:
    kind: markdown
    value: "```wing\ndurationThing: duration\n```"
  sortText: "ab|durationThing:"
  insertText: "durationThing: $1,"
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest

