libs/wingc/src/lsp/snapshots/completions/partial_reference_2.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: bThing
  kind: 5
  detail: Inner
  documentation:
    kind: markdown
    value: "```wing\nbThing: Inner\nstruct Inner\n```\n---\n### Fields\n- `durationThing` — duration"
  sortText: ab|bThing

