libs/wingc/src/lsp/snapshots/completions/partial_reference_3.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: durationThing
  kind: 5
  detail: duration
  documentation:
    kind: markdown
    value: "```wing\ndurationThing: duration\n```"
  sortText: ab|durationThing

