libs/wingc/src/lsp/snapshots/completions/partial_type_reference.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: func
  kind: 2
  detail: "preflight (): void"
  documentation:
    kind: markdown
    value: "```wing\nstatic preflight func: preflight (): void\n```"
  sortText: ff|func
  insertText: func()
- label: isConstruct
  kind: 2
  detail: "preflight (x: any): bool"
  documentation:
    kind: markdown
    value: "```wing\nstatic preflight isConstruct: preflight (x: any): bool\n```\n---\nChecks if `x` is a construct.\n### Parameters\n- `x` — `any` — Any object.\n\n### Returns\ntrue if `x` is an object created from a class which extends `Construct`.\n\n### Remarks\nUse this method instead of `instanceof` to properly detect `Construct`\ninstances, even when the construct library is symlinked.\n\nExplanation: in JavaScript, multiple copies of the `constructs` library on\ndisk are seen as independent, completely different libraries. As a\nconsequence, the class `Construct` in each copy of the `constructs` library\nis seen as a different class, and an instance of one class will not test as\n`instanceof` the other class. `npm install` will not create installations\nlike this, but users may manually symlink construct libraries together or\nuse a monorepo tool: in those cases, multiple copies of the `constructs`\nlibrary can be accidentally installed, and `instanceof` will behave\nunpredictably. It is safest to avoid using `instanceof`, and using\nthis type-testing method instead."
  sortText: ff|isConstruct
  insertText: isConstruct($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints

