libs/wingc/src/lsp/snapshots/completions/renamed_builtin_type_statics.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: fromJson
  kind: 2
  documentation:
    kind: markdown
    value: "```wing\nstatic fromJson: (json: Json): str\n```\n---\nParse string from Json.\n\n### Parameters\n - *json* - to create string from.\n\n### Returns\na string."
  sortText: ff|fromJson
  insertText: fromJson($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints

